Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flatiron_mantra = None\n",
+    "flatiron_mantra = \"Learn. Love. C\"\n",
     "flatiron_mantra"
    ]
   },
